[tool.poetry]
name = "currency-translator"
version = "0.1.0"
description = ""
authors = ["charmingruby <mrrubycanal3105@gmail.com>"]
readme = "README.md"
packages = [{include = "currency_translator"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
requests = "^2.31.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
